--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-pandas
-numpy
-scikit-learn
-streamlit
-plotly
+streamlit>=1.35
+pandas>=2.0
+numpy>=1.24
+matplotlib>=3.7
+seaborn>=0.12
+plotly>=5.18
+scikit-learn>=1.3
+xgboost>=1.7
+joblib>=1.3
